tdf#92454 DOCX import: allow overriding para prop from num style in para style

Word has a feature like this: a paragraph style can refer to a numbering
style, and both can specify paragraph margins. If that's the case, then
the ones from the paragraph style has priority.

In Writer, the numbering style has priority, so the only chance for
correct import result is to set the margin directly on the paragraph in
this case.

Change-Id: Iff3b03bcc56e0db3a48452c293acf41c91b8f159